# gapi/rpc_create_user.go
@@ -1,0 +1,84 @@
+package gapi
+
+import (
+	"context"
+	"time"
+
+	db "github.com/ebukacodes21/soleluxury-server/db/sqlc"
+	"github.com/ebukacodes21/soleluxury-server/pb"
+	"github.com/ebukacodes21/soleluxury-server/utils"
+	"github.com/ebukacodes21/soleluxury-server/validate"
+	"github.com/ebukacodes21/soleluxury-server/worker"
+	"github.com/hibiken/asynq"
+	pg "github.com/lib/pq"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (s Server) CreateUser(ctx context.Context, req *pb.CreateUserRequest) (*pb.CreateUserResponse, error) {
+	violations := validateCreateUserRequest(req)
+	if violations != nil {
+		return nil, invalidArgs(violations)
+	}
+
+	hash, err := utils.HashPassword(req.GetPassword())
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "unable to hash password %s", err)
+	}
+	code := validate.RandomString(32)
+
+	args := db.CreateUserTxParams{
+		CreateUserParams: db.CreateUserParams{
+			Username:         req.GetUsername(),
+			Email:            req.GetEmail(),
+			Password:         hash,
+			VerificationCode: code,
+		},
+		AfterCreate: func(user db.User) error {
+			payload := worker.RegisterMailPayload{
+				Username: user.Username,
+				Email:    user.Email,
+			}
+			options := []asynq.Option{
+				asynq.MaxRetry(10),
+				asynq.ProcessIn(10 * time.Second),
+				asynq.Queue(worker.Critical),
+			}
+			return s.td.DistributeTaskRegisterMail(ctx, &payload, options...)
+		},
+	}
+
+	result, err := s.repository.CreateUserTx(ctx, args)
+	if err != nil {
+		if pgErr, ok := err.(*pg.Error); ok {
+			switch pgErr.Code.Name() {
+			case "unique_violation":
+				return nil, status.Errorf(codes.Internal, "unique violation %s ", pgErr)
+			}
+		}
+		return nil, status.Errorf(codes.Internal, "failed to create user")
+	}
+
+	resp := &pb.CreateUserResponse{
+		User: convertUser(result.User),
+	}
+
+	return resp, nil
+}
+
+func validateCreateUserRequest(req *pb.CreateUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := validate.ValidateUsername(req.GetUsername()); err != nil {
+		violations = append(violations, fieldViolation("username", err))
+	}
+
+	if err := validate.ValidateEmail(req.GetEmail()); err != nil {
+		violations = append(violations, fieldViolation("email", err))
+	}
+
+	if err := validate.ValidatePassword(req.GetPassword()); err != nil {
+		violations = append(violations, fieldViolation("password", err))
+	}
+
+	return violations
+}
