# gapi/rpc_login_user.go
@@ -1,0 +1,43 @@
+package gapi
+
+import (
+	"context"
+
+	"github.com/ebukacodes21/soleluxury-server/pb"
+	"github.com/ebukacodes21/soleluxury-server/utils"
+	"github.com/ebukacodes21/soleluxury-server/validate"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (s *Server) LoginUser(ctx context.Context, req *pb.LoginUserRequest) (*pb.LoginUserResponse, error) {
+	violations := validateLoginUserRequest(req)
+	if violations != nil {
+		return nil, invalidArgs(violations)
+	}
+
+	user, err := s.repository.GetUser(ctx, req.GetEmail())
+	if err != nil {
+		return nil, status.Errorf(codes.NotFound, "no user found %s ", err)
+	}
+
+	err = utils.ComparePassword(req.GetPassword(), user.Password)
+	if err != nil {
+		return nil, status.Errorf(codes.NotFound, "incorrect password %s ", err)
+	}
+
+	return nil, nil
+}
+
+func validateLoginUserRequest(req *pb.LoginUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := validate.ValidateEmail(req.GetEmail()); err != nil {
+		violations = append(violations, fieldViolation("email", err))
+	}
+
+	if err := validate.ValidatePassword(req.GetPassword()); err != nil {
+		violations = append(violations, fieldViolation("password", err))
+	}
+
+	return violations
+}
